--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hackclub/meta": "^1.0.0",
     "d3": "^6.2.0",
     "d3-selection": "^2.0.0",
     "d3-shape": "^2.0.0",
